# patchworkmcp-python

./: .gitignore  AGENT_INSTRUCTIONS.md  CHANGELOG.md  README.md  feedback_tool.py  pyproject.toml
scripts/: bump_version.sh
src/patchworkmcp/: __init__.py  middleware.py
