[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchworkmcp"
version = "0.1.0"
description = "PatchworkMCP drop-in feedback tool for Python MCP servers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brightwing Systems LLC", email = "support@brightwingsystems.com" },
]
keywords = ["mcp", "feedback", "llm", "model-context-protocol", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://patchworkmcp.com"
Repository = "https://github.com/Brightwing-Systems-LLC/patchworkmcp-python"
Documentation = "https://patchworkmcp.com/docs/sdks/python"
"Bug Tracker" = "https://github.com/Brightwing-Systems-LLC/patchworkmcp-python/issues"
Changelog = "https://github.com/Brightwing-Systems-LLC/patchworkmcp-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/patchworkmcp"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "src/patchworkmcp/__init__.py"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.7",
]
